<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application -->
    <string name="app_name">Sismics Music</string>
    <string name="my_music">My music</string>
    <string name="now_playing">Now playing</string>
    <string name="playlists">Playlists</string>
    <string name="login_explain"><![CDATA[To start, you must download and install Sismics Music Server on <a href="http://www.sismics.com/music">www.sismics.com/music</a> and enter your server URL below]]></string>
    <string name="server_url_hint">music-demo.sismics.com</string>
    <string name="server">Server</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login_fail_title">Login fail</string>
    <string name="login_fail">Wrong username or password</string>
    <string name="network_error_title">Network error</string>
    <string name="network_error">Network error, please check internet connectivity and server URL</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url">Please check the server URL and try again</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="crash_toast_text">A crash occurred, a report has been sent to resolve this problem</string>
    <string name="album_art">Album art</string>
    <string name="more_options">More options</string>
    <string name="cached">Cached</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="next">Skip</string>
    <string name="handle">Drag me</string>
    <string name="add_all_toast">All added to queue</string>
    <string name="play_all_toast">Playing all</string>
    <string name="add_toast">Added to queue</string>
    <string name="playlist_empty">The playlist is empty</string>
    <string name="empty_playlist">Clear the playlist</string>
    <string name="offline_mode">Offline mode toggle</string>
    <string name="unpin_track">Unpin this track</string>
    <string name="unpin_album">Unpin this album</string>
    <string name="like_track">Love this track</string>
    <string name="unlike_track">Unlove this track</string>
    <string name="album_not_cached">This album is not downloaded on your device, please disable offline mode</string>

    <!-- Validation -->
    <string name="validate_error_email">Invalid email</string>
    <string name="validate_error_length_min">Too short (min. %d)</string>
    <string name="validate_error_length_max">Too long (max. %d)</string>
    <string name="validate_error_required">Required</string>
    <string name="validate_error_alphanumeric">Only letters and numbers</string>
    <string name="connect_player">Connect Player</string>
    <string name="remote_control">Remote Control</string>
    <string name="fail_connecting_player">Failing to connect to player</string>
    <string name="connecting_player">Connecting to player&#8230;</string>
    <string name="success_connecting_player">Connected to player!</string>
    <string name="remote_play">Remote play</string>
    <string name="no_player_connected">No remote player connected</string>
    <string name="fail_sending_command">Error sending remote player command</string>
    <string name="remote_play_track">Remote: playing track</string>

</resources>