<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_bg"
    android:gravity="center_vertical">

    <ImageView
        android:contentDescription="@string/album_art"
        android:id="@+id/imgCover"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_toRightOf="@id/imgCover"
        android:layout_toLeftOf="@+id/cached"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="Bruno Mars"
            android:singleLine="true"
            android:ellipsize="end"
            android:textColor="#999"
            android:fontFamily="sans-serif-light"
            android:id="@+id/artistName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="Earth To Mars"
            android:singleLine="true"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:id="@+id/albumName" />

    </LinearLayout>

    <ImageView
        android:id="@+id/cached"
        android:contentDescription="@string/cached"
        android:layout_toLeftOf="@+id/overflow"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_cloud_check_grey600_24dp"/>

    <ImageView
        android:id="@+id/overflow"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:paddingRight="6dp"
        android:src="@drawable/overflow_menu"
        android:scaleType="center"
        android:contentDescription="@string/more_options"/>

</RelativeLayout>